fix css issue of report icons not showing on mobile

--- a/src/routes/landing/landing.less
+++ b/src/routes/landing/landing.less
@@ -734,7 +734,7 @@ tr.row.report {
   @media only screen and (max-width: 768px){
     width: 155px;
     position: absolute;
-    top: 60px;
+    top: 0;
   }
 }
 
